<resources>
    <string name="app_name">SpeneTrack</string>
    <string name="let_s_start">Let\'s Start</string>
    <string name="spense_smart_is_smart_money">Spense Smart is Smart Money</string>
    <string name="saving">Saving</string>
    <string name="sian_nun">Sian Nun</string>
    <string name="_1_000_000_00">$ 1,000,000.00</string>
    <string name="current_balance">Current Balance :</string>
    <string name="_2_000_000_00">$ 2,000,000.00</string>
    <string name="old_balance">old balance</string>
    <string name="last_month_expense">Last Month Expense</string>
    <string name="_1000">$ 1000</string>
    <string name="spend_type">Spend Type</string>
    <string name="cerrent_expence">Cerrently Expence</string>
    <string name="_100">$ 100</string>
    <string name="food">Food</string>
    <string name="fuel">Fuel</string>
    <string name="sport">Sport</string>
    <string name="other_expanse">Other Expanse</string>
    <string name="other">Other</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="welcome_back_to_spendtrack_application">Welcome back, to SpendTrack Application</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="you_don_t_have_an_account">You Don\'t have an account ?</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="create_your_account_to_enjoy_with_our_app">Create your account to enjoy with our app</string>
    <string name="you_have_account">You have account ?</string>
    <string name="food_expense">Food Expense</string>
    <string name="usa">USA</string>
    <string name="create_your_new_food_expense">Create Your new Food Expense!!</string>
    <string name="enter_your_expense_for">Enter your expense for</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="you_have_expense">You have expense</string>
    <string name="create_your_new_other_expnse">Create your new other expnse</string>
    <string name="create_your_new_sport_expense">Create your new Sport expense</string>
    <string name="create_your_new_fuel_expense">Create your new Fuel expense</string>
    <string name="transaction_detail">Transaction Detail</string>
    <string name="delete">Delete</string>
    <string name="_1">$1</string>
    <string name="gym">Gym</string>
    <string name="create_sport_expense">Create Sport Expense</string>
    <string name="fuel_expense">Fuel Expense</string>
    <string name="other_expense">Other Expense</string>
    <string name="_11_1_2024">11/1/2024</string>
    <string name="view_all_transaction">View All Transaction</string>
    <string name="_0_00">0.00</string>
    <string name="noted_your_transaction_are_the_temporary">Noted: transaction are the temporary</string>
    <string name="top_up_and_expense">Top-up and Expense</string>
</resources>