<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:textAlignment="center"
    android:padding="10dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:background="@drawable/custom_background"
    android:layout_margin="5dp">
   <LinearLayout
       android:layout_width="200dp"
       android:layout_height="45dp"
       android:orientation="vertical">
       <TextView
           android:id="@+id/date_time"
           android:layout_width="200dp"
           android:text="11/1/2024"
           android:layout_height="wrap_content"
           tools:ignore="Suspicious0dp" />

       <!-- Expense Type -->
       <TextView
           android:id="@+id/expenseType"
           android:layout_width="200dp"
           android:layout_height="0dp"
           android:layout_weight="3"
           android:text="@string/gym"
           android:textColor="#000"
           android:textSize="20sp"
           android:textStyle="bold" />
   </LinearLayout>

    <!-- Amount -->
    <TextView
        android:id="@+id/amount"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="end"
        android:layout_marginTop="8dp"
        android:text="@string/_1"
        android:textSize="20sp"
        android:layout_marginRight="10dp"
        android:textColor="#000" />

    <!-- Delete Icon -->
    <ImageView
        android:id="@+id/deleteIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:contentDescription="@string/delete"
        android:src="@drawable/trash" />
</LinearLayout>
